<?xml version="1.0"?>
<package>
  <name>robotiq_s_model_action_server</name>
  <version>0.0.0</version>
  <description>The robotiq_s_model_action_server package</description>

  <maintainer email="goerner@informatik.uni-hamburg.de">Michael Goerner</maintainer>
  <author email="5jonetzk@informatik.uni-hamburg.de">Yannick Jonetzko</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>robotiq_s_model_control</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>robotiq_s_model_control</run_depend>
  <run_depend>roscpp</run_depend>
</package>
